--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
-name: pipes
-version: 0.0.4
+name: streamable
+version: 0.0.5
 author: Alexander Adeniyin Ewetumo <trinoxf@gmail.com>
-homepage: http://influx.github.com/pipes.dart
 description: a library of helpful custom stream candies
+homepage: http://influx.github.com/pipes.dart
 dependencies:
-  hub: any
   ds: any
+  hub: any
+  invocable: any
+  statemanager: any
