--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: streamable
-version: 0.0.5
+version: 0.0.6
 author: Alexander Adeniyin Ewetumo <trinoxf@gmail.com>
 description: a library of helpful custom stream candies
-homepage: http://influx.github.com/pipes.dart
+homepage: http://influx.github.com/streamable.dart
 dependencies:
   ds: any
   hub: any
