--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: streamable
-version: 0.3.8
+version: 0.3.9
 author: Alexander Adeniyin Ewetumo <trinoxf@gmail.com>
-description: provides streaming api based on nodelists
+description: provides a mixable streaming api based on nodelists 
 homepage: http://influx.github.com/streamable.dart
 dependencies:
   ds: any
